--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,40 @@
 \section{Introduction}
 UNIT 1-ALGEBRA:
 
-a.)(p-4)(p+5)=p^2+p-20
+$a.)(p-4)(p+5)=p^2+p-20$
 
-b.)(n+8)(n+2)
+$b.)(n+8)(n+2)=n^2+10n+16$
+
+$c.)(m+3)(m-7)=m^2-4m-21$
+
+$d.)(w-4)(w-6)=w^2-10w+24$
+
+$e.)(2x-3)(5x-4)=10x^2-23x+12$
+
+$f.)(y-5)(2y+9)=2y^2-y-45$
+
+$g.)(3a+1)(4a+1)=12a^2+7a+1$
+
+$h.)(7-x)(4+x)=28+3x-x^2$
+
+$i.)(x-6)(x+6)=x^2-36$
+
+$j.)(x+2)^2=x^2+4x+4$
+
+$k.)(y+11)(y-11)=y^2-121$
+
+$l.)(z-5)^2=z^2-10z+25$\newline
+
+$2.)4(x-2)(3x-5)=12x^2-44x+40$
+
+$b.)(4x-3)^2-5(3x^2-5x+7)$
+  $=16x^2-12x-12x+9-5(3x^2-5x+7)$$=x^2+x-26$\newline
+  
+$3.)(2x-5)(x+1)=2x^2-3x-5$
+
+$b.)(
+
+
+
+
 \end{document}
